--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to the Landon's homepage!
+description: Fell free to bookmark this to keep an eye on my career.
